--- a/apps/mikri-app/package.json
+++ b/apps/mikri-app/package.json
@@ -14,26 +14,43 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@paralleldrive/cuid2": "^2.2.2",
     "@react-navigation/native": "^6.0.2",
+    "@tamagui/config": "^1.91.4",
+    "@tamagui/lucide-icons": "^1.91.4",
+    "@tamagui/sheet": "^1.91.4",
+    "babel-plugin-inline-import": "^3.0.0",
+    "drizzle-orm": "^0.30.2",
+    "drizzle-valibot": "^0.2.0",
     "expo": "~50.0.11",
+    "expo-asset": "^9.0.2",
+    "expo-dev-client": "~3.3.9",
+    "expo-file-system": "^16.0.8",
     "expo-font": "~11.10.3",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.8",
     "expo-splash-screen": "~0.26.4",
+    "expo-sqlite": "^13.3.0",
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.3",
     "expo-web-browser": "~12.8.2",
+    "fast-text-encoding": "^1.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-svg": "^15.1.0",
     "react-native-web": "~0.19.6",
-    "expo-dev-client": "~3.3.9"
+    "tamagui": "^1.91.4",
+    "valibot": "^0.30.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "drizzle-kit": "^0.20.14",
     "jest": "^29.2.1",
     "jest-expo": "~50.0.3",
     "react-test-renderer": "18.2.0",
